--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -4,7 +4,7 @@ hero:
 
 about:
   title: Обо мне
-  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Я уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю книги и статьи, чтобы расширить свои знания и навыки.
+  summary: Фронтенд-разработчик с опытом создания веб-приложений. Владею различными инструментами и методиками разработки. Уделяю внимание проектированию и оптимизации проектов, стремясь к идеальным макетам и чистому коду. В свободное время я изучаю новые технологии, читаю книги и статьи, чтобы расширить свои знания и навыки.
 
 contacts:
   ariaLabel: Contacts section
@@ -44,14 +44,14 @@ education:
   list:
     - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНОЛОГИЧЕСКИЙ УНИВЕРСИТЕТ
       years: 2014-2018
-      degree: Магистр
-      additionals:
+      subtitle: Магистр
+      features:
         - Компьютерная инженерия, компьютерные системы и сети
         - Курсы по web-программированию (JavaScript, Ruby on Rails, Python), участие в факультативных занятиях, предоставленных университетом во время обучения
     - name: ЧЕРКАССКИЙ ГОСУДАРСТВЕННЫЙ БИЗНЕС-КОЛЛЕДЖ
       years: 1998-2002
-      degree: Младший специалист
-      additionals:
+      subtitle: Младший специалист
+      features:
         - Обслуживание компьютерных и интеллектуальных систем и сетей
         - В ходе учебной программы осуществлялось изучение языков программирования Assembler и Delphi
 
@@ -59,17 +59,17 @@ works:
   title: Опыт работы
   list:
     - name: ФРИЛАНС
-      position: Веб-разработчик
+      subtitle: Веб-разработчик
       years: 2022-2024
-      additionals:
+      features:
         - Рaбота с постоянными киентами. Разработка full-stack решений для малого бизнеса.
       skills:
         title: 'Используемые технологии:'
         list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
     - name: DIGITAL–АГЕНТСТВО ONLY
-      position: Фронтенд-разработчик
+      subtitle: Фронтенд-разработчик
       years: 2020-2022
-      additionals:
+      features:
         - Участие в разработке интерпрайз проектов, учитывая бизнес-требования, для обесппечения их функциональности и эффективности.
         - Поддержка и дальнейшая разработка легаси-проектов.
         - Активное участие в совещаниях и обсуждениях требований к проектам. Сотрудничество с другими членами команды, включая дизайнеров, бэкенд-разработчиков и менеджеров проектов, для решения задач.
@@ -78,9 +78,9 @@ works:
         title: 'Используемые технологии:'
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
     - name: ФРИЛАНС
-      position: Фронтенд-разработчик
+      subtitle: Фронтенд-разработчик
       years: 2017-2020
-      additionals:
+      features:
         - Создание лендингов, корпоративных сайтов и других веб-решений для бизнеса в команде по разработке веб-проектов на фрилансе.
         - Поддержка, дальнейшая разработка и решение задач в существующих проектах.
       skills:
