--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -4,7 +4,7 @@ hero:
   
 about:
   title: Про мене
-  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Я приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час я вивчаю нові технології, читаю книжки та статті, щоб розширити свої знання та навички.
+  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час я вивчаю нові технології, читаю книжки та статті, щоб розширити свої знання та навички.
 
 contacts:
   ariaLabel: Contacts section
@@ -44,14 +44,14 @@ education:
   list:
     - name: ЧЕРКАСЬКИЙ ДЕРЖАВНИЙ ТЕХНОЛОГІЧНИЙ УНІВЕРСИТЕТ
       years: 2014-2018
-      degree: Магістр
-      additionals:
+      subtitle: Магістр
+      features:
         - Комп'ютерна інженерія, комп'ютерні системи та мережі
         - Курси з web-програмування (JavaScript, Ruby on Rails, Python), участь у факультативних заняттях, наданих університетом під час навчання
     - name: ЧЕРКАСЬКИЙ ДЕРЖАВНИЙ БІЗНЕС-КОЛЕДЖ
       years: 1998-2002
-      degree: Молодший спеціаліст
-      additionals:
+      subtitle: Молодший спеціаліст
+      features:
         - Обслуговування комп'ютерних та інтелектуальних систем та мереж
         - Під час навчальної програми здійснювалося вивчення мов програмування Assembler і Delphi
 
@@ -59,17 +59,17 @@ works:
   title: Досвід роботи
   list:
     - name: ФРИЛАНС
-      position: Веб-разработчик
+      subtitle: Веб-разработчик
       years: 2022-2024
-      additionals:
+      features:
         - Робота з постійними клієнтами. Розробка full-stack рішень для малого бізнесу.
       skills:
         title: 'Використовувані технології:'
         list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]    
     - name: DIGITAL–АГЕНТСТВО ONLY
-      position: Фронтенд-разработчик
+      subtitle: Фронтенд-разработчик
       years: 2020-2022
-      additionals:
+      features:
         - Участь у розробці інтерпрайз проєктів, враховуючи бізнес-вимоги, для забезпечення їх функціональності та ефективності.
         - Підтримка та подальше розроблення легасі-проєктів.
         - Активна участь у нарадах і обговореннях вимог до проєктів. Співпраця з іншими членами команди, включно з дизайнерами, бекенд-розробниками та менеджерами проєктів, для вирішення завдань.
@@ -78,9 +78,9 @@ works:
         title: 'Використовувані технології:'
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
     - name: ФРИЛАНС
-      position: Фронтенд-разработчик
+      subtitle: Фронтенд-разработчик
       years: 2017-2020
-      additionals:
+      features:
         - Створення лендінгів, корпоративних сайтів та інших веб-рішень для бізнесу в команді з розробки веб-проєктів на фрілансі.
         - Підтримка, подальше розроблення та вирішення завдань в існуючих проєктах.
       skills:
