--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -62,7 +62,7 @@ works:
       subtitle: Веб-разработчик
       years: 2022-2024
       features:
-        - Рaбота с постоянными киентами. Разработка full-stack решений для малого бизнеса.
+        - Работа с постоянными клиентами. Разработка full-stack решений для малого бизнеса.
       skills:
         title: 'Используемые технологии:'
         list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]
@@ -70,7 +70,7 @@ works:
       subtitle: Фронтенд-разработчик
       years: 2020-2022
       features:
-        - Участие в разработке интерпрайз проектов, учитывая бизнес-требования, для обесппечения их функциональности и эффективности.
+        - Участие в разработке enterprise-проектов, учитывая бизнес-требования, для обеспечения их функциональности и эффективности.
         - Поддержка и дальнейшая разработка легаси-проектов.
         - Активное участие в совещаниях и обсуждениях требований к проектам. Сотрудничество с другими членами команды, включая дизайнеров, бэкенд-разработчиков и менеджеров проектов, для решения задач.
         - Опыт ведения разработки и проектирования в качестве ведущего фронтенд-разработчика на нескольких проектах.
@@ -89,7 +89,7 @@ works:
     
 additional:
   title: Социальная активность
-  text: С 2019 года активно участвовал в профессиональном сообществе веб-разработчиков на одном из популярных онлайн-форумов, решал задачи, связанные с веб-технологиями, а также выполял роль модератора, обеспечивая высокое качество обсуждений и поддержку как новичков, так и опытных разработчиков.
+  text: С 2019 года активно участвовал в профессиональном сообществе веб-разработчиков на одном из популярных онлайн-форумов, решал задачи, связанные с веб-технологиями, а также выполнял роль модератора, обеспечивая высокое качество обсуждений и поддержку как новичков, так и опытных разработчиков.
   link: 
     name: Ссылка на профиль
     tip: (возможо, потребуется vpn)
