--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -4,7 +4,7 @@ hero:
   
 about:
   title: Про мене
-  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час я вивчаю нові технології, читаю книжки та статті, щоб розширити свої знання та навички.
+  summary: Фронтенд-розробник із досвідом створення веб-додатків. Володію різними інструментами та методиками розробки. Приділяю увагу проєктуванню та оптимізації проєктів, прагнучи до ідеальних макетів і чистого коду. У вільний час вивчаю нові технології, читаю книжки та статті, щоб розширити свої знання та навички.
 
 contacts:
   ariaLabel: Contacts section
@@ -58,8 +58,8 @@ education:
 works:
   title: Досвід роботи
   list:
-    - name: ФРИЛАНС
-      subtitle: Веб-разработчик
+    - name: ФРІЛАНС
+      subtitle: Веб-розробник
       years: 2022-2024
       features:
         - Робота з постійними клієнтами. Розробка full-stack рішень для малого бізнесу.
@@ -67,18 +67,18 @@ works:
         title: 'Використовувані технології:'
         list: [HTML/CSS/JS, Parcel, React, TypeScript, Astro, Vitepress, PHP, Laravel, Tailwind]    
     - name: DIGITAL–АГЕНТСТВО ONLY
-      subtitle: Фронтенд-разработчик
+      subtitle: Фронтенд-розробник
       years: 2020-2022
       features:
-        - Участь у розробці інтерпрайз проєктів, враховуючи бізнес-вимоги, для забезпечення їх функціональності та ефективності.
+        - Участь у розробці enterprise-проєктів, враховуючи бізнес-вимоги, для забезпечення їх функціональності та ефективності.
         - Підтримка та подальше розроблення легасі-проєктів.
         - Активна участь у нарадах і обговореннях вимог до проєктів. Співпраця з іншими членами команди, включно з дизайнерами, бекенд-розробниками та менеджерами проєктів, для вирішення завдань.
-        - Досвід ведення розробки та проєктування як основного фронтенд-розробника на кількох проєктах.
+        - Досвід ведення розробки та проєктування як основного фронтенд-розробника на декількох проєктах.
       skills:
         title: 'Використовувані технології:'
         list: [HTML/CSS/JS, React, TypeScript, MobX, Ant Design, Styled Components, Vue, jQuery]
-    - name: ФРИЛАНС
-      subtitle: Фронтенд-разработчик
+    - name: ФРІЛАНС
+      subtitle: Фронтенд-розробник
       years: 2017-2020
       features:
         - Створення лендінгів, корпоративних сайтів та інших веб-рішень для бізнесу в команді з розробки веб-проєктів на фрілансі.
