--- a/src/content/main/ua/main.yaml
+++ b/src/content/main/ua/main.yaml
@@ -107,7 +107,7 @@ footer:
     href: https://github.com/mrtoxas/cv
 
 portfolio:
-  title: Work Samples
+  title: Приклади робот
   list:
     - name: Cassette tape in CSS
       description: CSS Art
