--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -110,8 +110,10 @@ portfolio:
   title: Work Samples
   list:
     - name: Cassette tape in CSS
-      description: CSS Art
-      tech: [SCSS]
+      description: CSS Art. Анимированное изображение аудио-кассеты, созданное исключительно с помощью CSS-стилей.
+      tech:
+        title: 'Використовувані технології:'
+        list: [ SCSS ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/cassette-tape-css
@@ -119,7 +121,9 @@ portfolio:
           link: https://mrtoxas.github.io/cassette-tape-css/ 
     - name: Parcel static
       description: Project builder for creating static sites based Parcel v.2 creates a development environment and offers choices between different development technologies.
-      tech: [Node.js, esbuild, TypeScript]
+      tech:
+        title: 'Використовувані технології:'
+        list: [ Node.js, esbuild, TypeScript ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/create-parcel-static
@@ -127,7 +131,9 @@ portfolio:
           link: https://www.npmjs.com/package/create-parcel-static
     - name: CV
       description: CV and developer portfolio
-      tech: [Astro, TypeScript, UnoCSS]
+      tech:
+        title: 'Використовувані технології:'
+        list: [ Astro, TypeScript, UnoCSS ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/cv
@@ -135,9 +141,11 @@ portfolio:
           link: https://mrtoxas.github.io/cv/
     - name: Svitlo
       description: PWA App. Parsing data and user-friendly displaying the planned blackout schedules of a particular city.
-      tech: [Astro, React, TypeScript, Prisma, Tailwind]
+      tech:
+        title: 'Використовувані технології:'
+        list: [ Astro, React, TypeScript, Prisma, Tailwind ]
       links:
-        - name: svitlo.vercel.app
+        - name: Демо
           link: https://svitlo.vercel.app
         - name: Telegram Web App
-          link: https://svitlo.vercel.app
+          link: https://t.me/che_svitlo_bot
