--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/bxl": "^1.1.10",
     "@iconify-json/lucide": "^1.1.188",
     "@playform/compress": "^0.0.7",
+    "@types/photoswipe": "^4.1.6",
     "@unocss/preset-icons": "^0.60.4",
     "@unocss/preset-wind": "^0.60.4",
     "@unocss/reset": "^0.60.4",
@@ -25,5 +26,8 @@
     "typescript": "^5.4.5",
     "unocss": "^0.60.4",
     "unocss-preset-theme": "^0.12.0"
+  },
+  "dependencies": {
+    "photoswipe": "^5.4.4"
   }
 }
