--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -119,11 +119,7 @@ portfolio:
           link: https://github.com/mrtoxas/create-parcel-static
         - name: NPM
           link: https://www.npmjs.com/package/create-parcel-static
-      images: [
-        'parcel-static-1.png', 
-        'parcel-static-2.png', 
-        'parcel-static-3.png'
-      ]
+      imgKey: parcel-static
     - name: Cassette tape
       description: CSS Art. An animated audio tape image created exclusively with CSS styles.
       tech:
