--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "unocss-preset-theme": "^0.12.0"
   },
   "dependencies": {
-    "@fancyapps/ui": "^5.0.36",
-    "sharp": "^0.33.4"
+    "@fancyapps/ui": "^5.0.36"
   }
 }
