--- a/src/content/main/en/main.yaml
+++ b/src/content/main/en/main.yaml
@@ -110,10 +110,8 @@ portfolio:
   title: Work Samples
   list:
     - name: Parcel static
-      description: Project builder for creating static sites based Parcel v.2 creates a development environment and offers choices between different development technologies.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Node.js, esbuild, TypeScript ]
+      description: CLI-Project builder for creating static sites based Parcel. Creates a development environment and offers choices between different development technologies.
+      techList: [ Node.js, esbuild, TypeScript ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/create-parcel-static
@@ -122,45 +120,34 @@ portfolio:
       imgKey: parcel-static
     - name: Cassette tape
       description: CSS Art. An animated audio tape image created exclusively with CSS styles.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ SCSS ]
+      techList: [ CSS, SCSS, Gulp ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/cassette-tape-css
         - name: Demo
           link: https://mrtoxas.github.io/cassette-tape-css/
-    - name: CV/Portfolio
-      description: This CV and developer portfolio
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Astro, TypeScript, UnoCSS ]
-      links:
-        - name: GitHub
-          link: https://github.com/mrtoxas/cv
-        - name: Demo
-          link: https://mrtoxas.github.io/cv/
+      imgKey: cassette-type
     - name: Svitlo
       description: PWA App. Parsing data and user-friendly displaying the planned blackout schedules of a particular city.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Astro, React, TypeScript, Prisma, Tailwind ]
+      techList: [ Astro, React, TypeScript, Prisma, Tailwind ]
       links:
         - name: Demo
           link: https://svitlo.vercel.app
         - name: Telegram Web App
           link: https://t.me/che_svitlo_bot
-      images: [
-        'example1.png'
-      ]
+      imgKey: svitlo
     - name: Shmot-shopy
-      description: Platform for creating online stores on subdomains (similar to Shopify), with a common administrative panel for each user, with the ability to create, modify, clone and otherwise manage sub-sites
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Laravel, Inertia, React, Tailwind ]
+      description: Platform for creating online stores on subdomains, with a common administrative panel for each user, with the ability to create, modify, clone and otherwise manage sub-sites
+      techList: [ Laravel, Inertia, React, Tailwind ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/shmot-shopy
-      images: [
-        'example1.png'
-      ]
+      imgKey: shmot-shopy
+    - name: CV/Portfolio
+      description: This CV and developer portfolio
+      techList: [ Astro, TypeScript, UnoCSS ]
+      links:
+        - name: GitHub
+          link: https://github.com/mrtoxas/cv
+        - name: Demo
+          link: https://mrtoxas.github.io/cv/
