--- a/src/content/main/ru/main.yaml
+++ b/src/content/main/ru/main.yaml
@@ -109,48 +109,45 @@ footer:
 portfolio:
   title: Work Samples
   list:
-    - name: Cassette tape in CSS
-      description: CSS Art. Анимированное изображение аудио-кассеты, созданное исключительно с помощью CSS-стилей.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ SCSS ]
-      links:
-        - name: GitHub
-          link: https://github.com/mrtoxas/cassette-tape-css
-        - name: Demo
-          link: https://mrtoxas.github.io/cassette-tape-css/ 
     - name: Parcel static
-      description: Project builder for creating static sites based Parcel v.2 creates a development environment and offers choices between different development technologies.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Node.js, esbuild, TypeScript ]
+      description: Консольный конструктор проектов для создания статических сайтов на базе Parcel. Создает среду разработки и предлагает выбор между различными технологиями разработки.
+      techList: [ Node.js, esbuild, TypeScript ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/create-parcel-static
         - name: NPM
           link: https://www.npmjs.com/package/create-parcel-static
-      images: [
-        'parcel-static-1.png', 
-        'parcel-static-2.png', 
-        'parcel-static-3.png'
-      ]
-    - name: CV
-      description: CV and developer portfolio
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Astro, TypeScript, UnoCSS ]
+      imgKey: parcel-static
+    - name: Cassette tape
+      description: CSS Art. Анимированное изображение аудио-кассеты, созданное исключительно с помощью стилей CSS.
+      techList: [ CSS, SCSS, Gulp ]
+      links:
+        - name: GitHub
+          link: https://github.com/mrtoxas/cassette-tape-css
+        - name: Demo
+          link: https://mrtoxas.github.io/cassette-tape-css/
+      imgKey: cassette-type
+    - name: Svitlo
+      description: PWA-приложение. Парсинг данных и удобное отображение графиков плановых отключений в конкретном городе.
+      techList: [ Astro, React, TypeScript, Prisma, Tailwind ]
+      links:
+        - name: Demo
+          link: https://svitlo.vercel.app
+        - name: Telegram Web App
+          link: https://t.me/che_svitlo_bot
+      imgKey: svitlo
+    - name: Shmot-shopy
+      description: Платформа для создания интернет-магазинов на субдоменах, с общей административной панелью для каждого пользователя, с возможностью создавать, изменять, клонировать и иным образом управлять субсайтами.
+      techList: [ Laravel, Inertia, React, Tailwind ]
+      links:
+        - name: GitHub
+          link: https://github.com/mrtoxas/shmot-shopy
+      imgKey: shmot-shopy
+    - name: CV/Portfolio
+      description: Данное резюме и портфолио разработчика
+      techList: [ Astro, TypeScript, UnoCSS ]
       links:
         - name: GitHub
           link: https://github.com/mrtoxas/cv
         - name: Demo
           link: https://mrtoxas.github.io/cv/
-    - name: Svitlo
-      description: PWA App. Parsing data and user-friendly displaying the planned blackout schedules of a particular city.
-      tech:
-        title: 'Використовувані технології:'
-        list: [ Astro, React, TypeScript, Prisma, Tailwind ]
-      links:
-        - name: Демо
-          link: https://svitlo.vercel.app
-        - name: Telegram Web App
-          link: https://t.me/che_svitlo_bot
